# drt-rs-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  publish.sh  tool-update.sh
.github/workflows/: actions-nightly.yml  actions.yml  template-test-current.yml  template-test-released.yml
chain/core/: Cargo.toml
chain/vm/: Cargo.toml
chain/vm/src/: lib.rs  mem_conv.rs  vm_err_msg.rs
chain/vm/src/tx_execution/: blockchain_vm.rs  exec_contract_endpoint.rs  exec_general_tx.rs
chain/vm/src/tx_mock/: tx_cache_balance_util.rs
chain/vm/src/vm_hooks/: vh_dispatcher.rs  vh_source.rs
chain/vm/src/vm_hooks/vh_handler/: vh_send.rs
chain/vm/src/vm_hooks/vh_impl/: vh_debug_api.rs  vh_single_tx_api.rs  vh_static_api.rs
chain/vm/src/world_mock/: blockchain_mock.rs  failing_executor.rs
contracts/benchmarks/large-storage/: Cargo.toml
contracts/benchmarks/mappers/linked-list-repeat/meta/: Cargo.toml
contracts/benchmarks/mappers/single-value-repeat/meta/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/core/price-aggregator/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/wmoa-swap/: Cargo.toml
contracts/core/wmoa-swap/meta/: Cargo.toml
contracts/core/wmoa-swap/meta/src/: main.rs
contracts/core/wrewa-swap/: Cargo.toml
contracts/core/wrewa-swap/meta/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/check-pause/: Cargo.toml
contracts/examples/crowdfunding-dcdt/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/crypto-zombies/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/empty/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/fractional-nfts/: Cargo.toml
contracts/examples/fractional-nfts/meta/: Cargo.toml
contracts/examples/lottery-dcdt/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/multisig/interact/: Cargo.toml  config.toml
contracts/examples/multisig/meta/: Cargo.toml
contracts/examples/multisig/scenarios/: interactor_nft.scen.json  interactor_nft_all_roles.scen.json  interactor_wmoa.scen.json
contracts/examples/multisig/tests/: multisig_scenario_rs_test.rs
contracts/examples/nft-minter/: Cargo.toml  readme.md
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/nft-storage-prepay/meta/: Cargo.toml
contracts/examples/nft-subscription/: Cargo.toml
contracts/examples/ping-pong-moa/: Cargo.toml  sc-config.toml
contracts/examples/ping-pong-rewa/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/rewards-distribution/: Cargo.toml
contracts/examples/rewards-distribution/meta/: Cargo.toml
contracts/examples/seed-nft-minter/: Cargo.toml
contracts/examples/seed-nft-minter/meta/: Cargo.toml
contracts/examples/token-release/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected_main.abi.json
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/basic-features/meta/: Cargo.toml
contracts/feature-tests/big-float-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/dcdt-system-sc-mock/: Cargo.toml
contracts/feature-tests/erc-style-contracts/erc721/meta/: Cargo.toml
contracts/feature-tests/erc-style-contracts/lottery-erc20/meta/: Cargo.toml
contracts/feature-tests/exchange-features/: Cargo.toml
contracts/feature-tests/formatted-message-features/: Cargo.toml
contracts/feature-tests/managed-map-features/: Cargo.toml
contracts/feature-tests/multi-contract-features/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/rust-snippets-generator-test/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/scenario-tester/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected_main.abi.json
contracts/feature-tests/use-module/meta/: Cargo.toml
contracts/feature-tests/use-module/meta/abi/: Cargo.toml
contracts/modules/: Cargo.toml
contracts/modules/src/: dcdt.rs  default_issue_callbacks.rs  dns.rs  staking.rs
contracts/modules/src/bonding_curve/utils/: owner_endpoints.rs  user_endpoints.rs
contracts/modules/src/token_merge/: merged_token_setup.rs
data/codec/: Cargo.toml
data/codec-derive/: Cargo.toml
framework/base/: Cargo.toml
framework/derive/: Cargo.toml
framework/derive/src/: lib.rs
framework/derive/src/parse/: payable_parse.rs
framework/derive/src/parse/attributes/: payable_attr.rs
framework/derive/src/preprocessing/: substitution_list.rs
framework/meta/: Cargo.toml  README.md
framework/meta-lib/: Cargo.toml  README.md
framework/meta/tests/: template_test.rs
framework/scenario/: Cargo.toml
framework/scenario/src/: bech32.rs  vm_go_tool.rs
framework/scenario/tests/: contract_call_test.rs  dcdt_token_payment_test.rs  scenarios_self_test.rs  test_tx_deployed_address.rs  test_tx_sc_result.rs  token_identifier_test.rs  tx_call_normalize.rs
framework/snippets/: Cargo.toml
framework/snippets/src/: account_tool.rs
framework/snippets/tests/: test_tx_issued_token_identifier.rs  test_tx_multiple_sc_results.rs  test_tx_sc_result.rs
framework/wasm-adapter/: Cargo.toml
framework/wasm-adapter/src/api/managed_types/: static_var_api_node.rs
sdk/core/: Cargo.toml
sdk/core/src/: gateway.rs  wallet.rs
sdk/dapp/: Cargo.toml
sdk/http/: Cargo.toml
sdk/http/src/: lib.rs
sdk/scenario-format/: Cargo.toml
sdk/scenario-format/tests/: interpreter_test.rs
tools/drtpy-snippet-generator/: Cargo.toml
tools/interactor-system-func-calls/: Cargo.toml  README.md
tools/plotter/: Cargo.toml
tools/rust-debugger/: README.md
vm/: Cargo.toml
(+259 files in other folders)
