[package]
name = "dharitri-chain-core"
version = "0.11.1"
edition = "2021"

authors = [
    "Dharitri <contact@dharitri.org>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri chain interfaces, constants, and base types"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
bitflags = "=2.6.0"

[dependencies.dharitri-sc-codec]
version = "=0.21.1"
path = "../../data/codec"
features = ["derive"]
