[package]
name = "dharitri-chain-core"
version = "0.12.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri chain interfaces, constants, and base types"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
bitflags = "=2.6.0"

[dependencies.dharitri-sc-codec]
version = "=0.21.2"
path = "../../data/codec"
features = ["derive"]
