[package]
name = "dharitri-chain-vm"
version = "0.12.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri VM implementation and tooling"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
# not supported when compiling to wasm
wasm-incompatible = ["rand"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
itertools = "0.14.0"
hex-literal = "=0.4.1"
bitflags = "=2.6.0"
colored = "2.2"
rand = { version= "0.8.5", optional = true }
rand_seeder = "0.3.0"
ed25519-dalek = "2.1.0"

[dependencies.dharitri-chain-core]
version = "=0.12.0"
path = "../core"

[dependencies.dharitri-vm-executor]
version = "0.2.0"
