[package]
name = "dharitri-sc-wasm-adapter"
version = "0.54.5"
edition = "2021"

authors = [
    "Dharitri <contact@dharitri.org>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.dharitri-sc]
version = "=0.54.5"
path = "../base"
