[package]
name = "dharitri-sdk-http"
version = "0.7.1"
edition = "2021"

authors = [
    "Dharitri <contact@dharitri.org>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "SDK for interacting with the Dharitri blockchain"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["dharitri", "blockchain", "sdk", "api"]

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
static-tls = ["reqwest/rustls-tls"]
chain_simulator = []

[dependencies]
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
anyhow = "1.0.44"
hex = "0.4.3"
itertools = "0.13.0"
log = "0.4.17"

[dependencies.dharitri-sdk]
version = "=0.7.1"
path = "../core"