[package]
name = "multisig"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.dharitri-sc]
version = "0.55.0"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.55.0"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.55.0"
path = "../../../framework/scenario"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"

[dev-dependencies.dharitri-wmoa-swap-sc]
version = "0.55.0"
path = "../../core/wmoa-swap"

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
