[package]
name = "dharitri-price-aggregator-sc-meta"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.dharitri-price-aggregator-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.0.1"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta-lib]
version = "0.0.1"
path = "../../../../framework/meta-lib"
default-features = false
