[package]
name = "dharitri-wmoa-swap-sc-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-wmoa-swap-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.0.1"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta-lib]
version = "0.0.1"
path = "../../../../framework/meta-lib"
default-features = false
