[package]
name = "dharitri-wrewa-swap-sc-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-wrewa-swap-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.50.3"
path = "../../../../framework/base"

[dependencies.dharitri-sc-meta]
version = "0.50.3"
path = "../../../../framework/meta"
default-features = false
