[package]
name = "fractional-nfts-meta"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.fractional-nfts]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.55.0"
path = "../../../../framework/meta-lib"
default-features = false
