[package]
name = "multisig-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.multisig]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.55.0"
path = "../../../../framework/meta-lib"
default-features = false
