[package]
name = "nft-storage-prepay-meta"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.nft-storage-prepay]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.55.0"
path = "../../../../framework/meta-lib"
default-features = false
