[package]
name = "seed-nft-minter-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]

[dev-dependencies]

[dependencies.seed-nft-minter]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.55.0"
path = "../../../../framework/meta-lib"
default-features = false
