[package]
name = "use-module-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.use-module]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.54.5"
path = "../../../../framework/meta-lib"
default-features = false
