[package]
name = "linked-list-repeat-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dependencies.linked-list-repeat]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.50.3"
path = "../../../../../framework/meta"
default-features = false
