[package]
name = "lottery-erc20-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.lottery-erc20]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "0.55.0"
path = "../../../../../framework/meta-lib"
default-features = false
